--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["./*.ts", "./*.tsx", "components/**/*.ts", "components/**/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
